--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,44 @@
  *= require_tree .
  *= require_self
  */
+html {
+  height: 100%;
+}
+
+body {
+  font-family: sans-serif;
+  background: white;
+  color: #E1C6B8;
+  font-size: 12px;
+  height: 100%;
+}
+
+header {
+  display: flex;
+  justify-content: center;
+  background-color: #D4A69F;
+}
+
+nav {
+  width: 100%;
+  background-color: #C0768C;
+  padding: 6px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  ul {
+    display: flex;
+    justify-content: flex-end;
+  }
+
+}
+
+#root {
+  height: 100%;
+  padding-top: 20px;
+}
+
+nav link {
+  justify-content: right;
+}
