break out scss into folders

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,47 +10,10 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
  *= require_self
  */
-html {
-  height: 100%;
-}
+@import 'base/reset';
+@import 'base/layout';
 
-body {
-  font-family: sans-serif;
-  background: white;
-  color: #E1C6B8;
-  font-size: 12px;
-  height: 100%;
-}
-
-header {
-  display: flex;
-  justify-content: center;
-  background-color: #D4A69F;
-}
-
-nav {
-  width: 100%;
-  background-color: #C0768C;
-  padding: 6px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  ul {
-    display: flex;
-    justify-content: flex-end;
-  }
-
-}
-
-#root {
-  height: 100%;
-  padding-top: 20px;
-}
-
-nav link {
-  justify-content: right;
-}
+@import 'components/form';
+@import 'components/nav';
