--- a/app/assets/stylesheets/components/form.scss
+++ b/app/assets/stylesheets/components/form.scss
@@ -1,14 +1,44 @@
 
-.section-setup {
-  border: 2px purple solid;
+.form-container {
+  background-image: url('/assets/chocolate_cake.jpeg');
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
   display: flex;
-  justify-content: center;
-  width: 300px;
-  height: 500px;
-  padding: 10px;
-  margin: 0 auto;
+  align-items: center;
 }
 
-h2.section-setup {
+.form-setup {
+  border: 2px purple solid;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background: white;
+  width: 300px;
+  height: 500px;
+  text-align: center;
+  margin-left: 100px;
+}
+
+.form-title {
   font-size: 32px;
+}
+
+.form-button {
+  background: #AD525E;
+  color: white;
+  padding: 10px;
+}
+
+.form-label {
+  font-weight: bold;
+
+}
+
+.form-attributes {
+  color: lightgray;
+}
+
+.form-image {
+  display: inline-block;
 }
