host images on cloudinary, add guest seed

--- a/app/assets/stylesheets/base/colors.scss
+++ b/app/assets/stylesheets/base/colors.scss
@@ -10,3 +10,11 @@ $bloodred: #DF5337;
 $peach: #ECAC9D;
 $pink-orange: #E8927E;
 $pink-oatmeal: #EFC2B6;
+
+$dark-purple: #333352;
+$mauve: #654F60;
+$light-peach: #E1C6B8;
+$med-peach: #D4A69F;
+$light-orange: #DFA36A;
+$magenta: #AD525E;
+$pink: #C0768C;
