--- a/app/assets/stylesheets/components/form.scss
+++ b/app/assets/stylesheets/components/form.scss
@@ -1,6 +1,6 @@
 
 .form-container {
-  background-image: url('/assets/chocolate_cake.jpeg');
+  background-image: url('http://res.cloudinary.com/dg0cmca7a/image/upload/v1489682008/chocolate-cake-1526438_1920_bcsuxz.jpg');
   background-size: cover;
   width: 100vw;
   height: 100vh;
