add actions and ajax for recipes, seed db with tags, fix recipe container title

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,8 +12,8 @@
  *
  *= require_self
  */
-@import 'base/reset';
-@import 'base/layout';
+@import 'base/reset.scss';
+@import 'base/layout.scss';
 
-@import 'components/form';
-@import 'components/nav';
+@import 'components/form.scss';
+@import 'components/nav.scss';
