--- a/app/assets/stylesheets/components/nav.scss
+++ b/app/assets/stylesheets/components/nav.scss
@@ -1,7 +1,7 @@
 
 nav {
   width: 100%;
-  background-color: #C0768C;
+  background-color: lightgray;
   padding: 6px;
   display: flex;
   align-items: center;
