import colors.scss in application.css.scss, update build_notes

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,6 +13,7 @@
  *= require_self
  */
 @import 'base/reset.scss';
+@import 'base/colors.scss';
 @import 'base/layout.scss';
 
 @import 'components/form.scss';
