--- a/app/assets/stylesheets/base/colors.scss
+++ b/app/assets/stylesheets/base/colors.scss
@@ -3,6 +3,7 @@ $light-gray: #e2e2e2;
 $gray: #999;
 $dark-gray: #6f6f6f;
 
+// new color
 $bone: #F6F1EB;
 $tomato: #E46950;
 $light-peach: #F2D9D0;
@@ -11,9 +12,10 @@ $peach: #ECAC9D;
 $pink-orange: #E8927E;
 $pink-oatmeal: #EFC2B6;
 
+// old color
 $dark-purple: #333352;
 $mauve: #654F60;
-$light-peach: #E1C6B8;
+// $light-peach: #E1C6B8;
 $med-peach: #D4A69F;
 $light-orange: #DFA36A;
 $magenta: #AD525E;
