--- a/app/assets/stylesheets/components/form.scss
+++ b/app/assets/stylesheets/components/form.scss
@@ -9,11 +9,11 @@
 }
 
 .form-setup {
-  border: 2px purple solid;
+  border: 2px $tomato solid;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background: white;
+  background: $light-peach;
   width: 300px;
   height: 500px;
   text-align: center;
@@ -31,7 +31,7 @@
 }
 
 .form-button:hover {
-  background-color: #DFA36A;
+  background-color: $pink-orange;
 }
 
 .demo-button {
@@ -41,7 +41,7 @@
 }
 
 .demo-button:hover {
-  background-color: #DFA36A;
+  background-color: $pink-orange;
 }
 
 .form-label {
