--- a/app/assets/stylesheets/base/layout.scss
+++ b/app/assets/stylesheets/base/layout.scss
@@ -11,7 +11,7 @@ html {
 body {
   font-family: sans-serif;
   background: white;
-  color: #654F60;
+  color: $mauve;
   font-size: 12px;
   height: 100%;
 }
