--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,5 +16,5 @@
 @import 'base/colors.scss';
 @import 'base/layout.scss';
 
-@import 'components/form.scss';
+@import 'components/session_form.scss';
 @import 'components/nav.scss';
