add figaro, and fix scroll on splash

--- a/app/assets/stylesheets/base/layout.scss
+++ b/app/assets/stylesheets/base/layout.scss
@@ -10,11 +10,10 @@ html {
 
 body {
   font-family: sans-serif;
-  background: white;
+  background: $bone;
   color: $mauve;
   font-size: 12px;
   height: 100%;
-  overflow: hidden;
 }
 
 /*HEADER*/
