add styling for index and detail pages

--- a/app/assets/stylesheets/components/nav.scss
+++ b/app/assets/stylesheets/components/nav.scss
@@ -24,6 +24,10 @@ nav {
   padding-left: 4px;
   font-size: 60px;
   font-family: 'Baloo Bhaina';
+
+  .sub-header-title {
+    font-size: 20px;
+  }
 }
 
 .header-buttons {
