--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,5 +17,7 @@
 @import 'base/layout.scss';
 
 @import 'components/nav.scss';
+@import 'components/home.scss';
 @import 'components/session_form.scss';
 @import 'components/recipe_form.scss';
+@import 'components/recipe_detail.scss';
