--- a/app/assets/stylesheets/components/home.scss
+++ b/app/assets/stylesheets/components/home.scss
@@ -1,17 +1,45 @@
 .home-container {
-  background-image: url('http://res.cloudinary.com/dg0cmca7a/image/upload/v1489704383/michael-browning-188999_agnvtl.jpg');
   background-size: cover;
   width: 100vw;
   height: 100vh;
   display: flex;
   align-items: center;
   overflow: scroll;
-}
+  flex-direction: column;
 
-.home-nav {
+  .home-nav {
 
-}
+  }
 
-.home-img {
+  .home-img {
+    position: absolute;
+    height: auto;
+    padding: 5px;
+    width: 33.33%;
+  }
+
+
+  .recipes-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    .recipe_container {
+      flex-grow: 1;
+      align-self: flex-start;
+      height: 50px;
+      width: 75px;
+
+      .recipe-image {
+      }
+
+      .recipe-name {
+
+      }
+
+    }
+
+  }
+
 
 }
