add index/splash styling

--- a/app/assets/stylesheets/components/nav.scss
+++ b/app/assets/stylesheets/components/nav.scss
@@ -20,13 +20,17 @@ nav {
   background: $light-peach;
 }
 
-.header-title {
+.header-link {
+  flex-direction: column;
   padding-left: 4px;
-  font-size: 60px;
-  font-family: 'Baloo Bhaina';
+
+  .header-title {
+    font-size: 60px;
+    font-family: 'Baloo Bhaina';
+  }
 
   .sub-header-title {
-    font-size: 20px;
+    font-size: 18px;
   }
 }
 
