--- a/app/assets/stylesheets/components/home.scss
+++ b/app/assets/stylesheets/components/home.scss
@@ -6,18 +6,17 @@
   align-items: center;
   overflow: scroll;
   flex-direction: column;
+  padding: 10px;
 
   .home-nav {
 
   }
 
   .home-img {
-    position: absolute;
-    height: auto;
-    padding: 5px;
-    width: 33.33%;
+    position: static;
+    height: auto;;
+    width: 100%;
   }
-
 
   .recipes-container {
     display: flex;
@@ -25,16 +24,14 @@
     flex-wrap: wrap;
 
     .recipe_container {
-      flex-grow: 1;
-      align-self: flex-start;
-      height: 50px;
-      width: 75px;
 
       .recipe-image {
+
       }
 
       .recipe-name {
-
+        font-size: 16px;
+        font-weight: bold;
       }
 
     }
