udpate css, add images to seeds

--- a/app/assets/stylesheets/components/home.scss
+++ b/app/assets/stylesheets/components/home.scss
@@ -24,9 +24,11 @@
     flex-wrap: wrap;
 
     .recipe_container {
+      border: 2px $gray solid;
+      padding: 30px;
 
       .recipe-image {
-
+        display: inline-block;
       }
 
       .recipe-name {
