--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,6 +15,7 @@
 @import 'base/reset.scss';
 @import 'base/colors.scss';
 @import 'base/layout.scss';
+@import 'base/grid.scss';
 
 @import 'components/nav.scss';
 @import 'components/home.scss';
