--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,9 +5,21 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+
+    <script src="//widget.cloudinary.com/global/all.js" type="text/javascript">
+    </script>
+    <script type="text/javascript">
+      window.CLOUDINARY_OPTIONS = {
+        cloud_name: "<%=ENV['CLOUD_NAME']%>",
+        upload_preset: "<%=ENV['UPLOAD_PRESET']%>"
+      };
+    </script>
+
   </head>
 
   <body>
+
+
     <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina" rel="stylesheet">
     <%= yield %>
   </body>
