--- a/app/assets/stylesheets/components/home.scss
+++ b/app/assets/stylesheets/components/home.scss
@@ -11,9 +11,11 @@
   .home-img {
     position: static;
     max-height: 500px;
-    height: auto;
-    width: 100%;
+    height: 500px;
+    max-width: 1000px;
+    min-width: 900px;
     margin-bottom: 5px;
+    padding-top: 10px;
   }
 
   .recipes-container {
@@ -26,6 +28,7 @@
       border: 1px $light-gray solid;
       margin: 2px;
       padding: 5px;
+      background-color: white;
 
       .recipe-image {
         display: inline-block;
