--- a/app/assets/stylesheets/components/recipe_detail.scss
+++ b/app/assets/stylesheets/components/recipe_detail.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
 
+
   .recipe-detail-title {
     font-family: 'Baloo Bhaina';
     color: $mauve;
@@ -48,14 +49,24 @@
     background-color: $peach;
   }
 
-  .recipe-detail-ul-container {
+.recipe-comments-container {
+  padding-top: 40px;
+
+  .recipe-comments-title {
+    font-family: 'Baloo Bhaina';
+    color: $mauve;
+    font-size: 24px;
+    padding: 0;
+  }
+
+  .recipe-comments-ul-container {
     display: flex;
     flex-direction: column;
     border-bottom: $gray;
     padding-top: 40px;
 
 
-    .recipe-detail-comment {
+    .recipe-comment {
       border: 1px $light-gray solid;
       margin: 2px;
       padding: 5px;
@@ -63,4 +74,5 @@
 
     }
   }
+}
 }
