--- a/app/assets/stylesheets/components/home.scss
+++ b/app/assets/stylesheets/components/home.scss
@@ -44,7 +44,11 @@
           font-size: 16px;
           font-weight: bold;
         }
+      }
 
+      .recipe-container:hover {
+        background: rgba(100, 50, 50, 0.7);
+        color: white;
       }
 
     }
