add on hover to delectables icon

--- a/app/assets/stylesheets/components/nav.scss
+++ b/app/assets/stylesheets/components/nav.scss
@@ -35,6 +35,12 @@ nav {
   .sub-header-title {
     font-size: 18px;
   }
+
+}
+
+.header-link:hover {
+  background: rgba(100, 50, 50, 0.7);
+  color: white;
 }
 
 .header-buttons {
