--- a/app/assets/stylesheets/components/nav.scss
+++ b/app/assets/stylesheets/components/nav.scss
@@ -41,10 +41,20 @@ nav {
 .header-link:hover {
   background: rgba(100, 50, 50, 0.7);
   color: white;
+  cursor: pointer;
+
+  .header-title {
+    cursor: pointer;
+  }
+
+  .sub-header-title {
+    cursor: pointer;
+  }
 }
 
 .header-buttons {
   margin-right: 20px;
+
 }
 
 .header-button {
