--- a/app/assets/stylesheets/components/recipe_form.scss
+++ b/app/assets/stylesheets/components/recipe_form.scss
@@ -1,5 +1,5 @@
 .recipe-form-container {
-  background-image: url('http://res.cloudinary.com/dg0cmca7a/image/upload/v1489704383/michael-browning-188999_agnvtl.jpg');
+  background-image: url('https://res.cloudinary.com/dg0cmca7a/image/upload/v1489704383/michael-browning-188999_agnvtl.jpg');
   background-size: cover;
   width: 100vw;
   height: 100vh;
