add new colors for potential change, add borders to distinguish sections

--- a/app/assets/stylesheets/base/colors.scss
+++ b/app/assets/stylesheets/base/colors.scss
@@ -20,3 +20,11 @@ $med-peach: #D4A69F;
 $light-orange: #DFA36A;
 $magenta: #AD525E;
 $pink: #C0768C;
+
+// newest color
+$lightest-blue: #D4DBE3;
+$dark-gray-blue: #3D4652;
+$gray-blue: #999C94;
+$brown: #A76D54;
+$whitish: #FBFBFC;
+$goldish: #C6BE90;
