--- a/app/assets/stylesheets/components/recipe_detail.scss
+++ b/app/assets/stylesheets/components/recipe_detail.scss
@@ -26,16 +26,17 @@
     display: flex;
     flex-direction: row;
     flex-flow: wrap;
+    padding: 10px;
 
     .recipe-detail-img {
       justify-content: flex-start;
       margin: 0 auto;
       background: lightgray;
-      padding: 20px;
+      padding: 10px;
       min-width: 75px;
       min-height: 50px;
-      max-width: 500px;
-      max-height: 350px;
+      max-width: 400px;
+      max-height: 250px;
       margin: 0;
 
     }
@@ -51,6 +52,8 @@
 
         .recipe-detail-list {
           flex-flow: wrap;
+          list-style: disc;
+          list-style-position: inside;
           padding-left: 20px;
         }
       }
@@ -65,6 +68,8 @@
 
   .recipe-dir-container{
     padding-top: 20px;
+    padding-bottom: 20px;
+    border-top: 1px solid lightgray;
     float: left;
 
     .recipe-detail-p {
@@ -112,7 +117,8 @@
 
 
 .recipe-comments-container {
-  padding-top: 40px;
+  border-top: 1px solid lightgray;
+  padding-top: 10px;
 
   .recipe-comments-title {
     font-family: 'Baloo Bhaina';
