--- a/app/assets/stylesheets/components/home.scss
+++ b/app/assets/stylesheets/components/home.scss
@@ -10,10 +10,10 @@
 
   .home-img {
     position: static;
-    max-height: 500px;
     min-height: 200px;
-    max-width: 1000px;
     min-width: 500px;
+    max-height: 500px;
+    max-width: 1000px;
     margin-bottom: 5px;
     padding-top: 10px;
   }
@@ -49,7 +49,6 @@
       align-items: center;
       justify-content: center;
       margin: 0 auto;
-      width: 80%;
 
       .recipes-container {
         align-items: center;
@@ -59,6 +58,8 @@
         flex-wrap: wrap;
 
         .recipe-container {
+          height: 200px;
+          width: 200px;
           max-width: 200px;
           border: 1px $light-gray solid;
           margin: 2px;
@@ -67,6 +68,8 @@
 
           .recipe-image {
             display: inline-block;
+            width: 100%;
+            height: 70%;
           }
 
           .recipe-name {
