--- a/app/assets/stylesheets/components/home.scss
+++ b/app/assets/stylesheets/components/home.scss
@@ -32,8 +32,7 @@
         background: $pink-orange;
         color: $bone;
         height: 30px;
-        max-width: 200px;
-        min-width: 75px;
+        width: 15%;
         margin: 5px;
         text-align: center;
         align-items: center;
@@ -59,8 +58,8 @@
 
         .recipe-container {
           height: 200px;
-          width: 200px;
-          max-width: 200px;
+          width: 15%;
+          min-width: 200px;
           border: 1px $light-gray solid;
           margin: 2px;
           padding: 5px;
