--- a/app/assets/stylesheets/components/recipe_form.scss
+++ b/app/assets/stylesheets/components/recipe_form.scss
@@ -79,8 +79,8 @@
       font-size: 10px;
       background: $pink-orange;
       color: $bone;
-      height: 30px;
-      width: 130px;
+      height: 25px;
+      width: 125px;
       margin: 5px;
     }
 
@@ -92,12 +92,16 @@
       padding-top: 20px;
       margin-bottom: 20px;
 
-      .ing-form-attribute {
-        font-weight: bold;
-        background-color: rgba(255, 255, 255, 0.5);
+      .ing-list-container {
         margin: 5px auto;
-        padding: 2px;
-        width: 100px;
+
+        .ing-form-attribute {
+          margin-left: 5px;
+          font-weight: bold;
+          background-color: rgba(255, 255, 255, 0.5);
+          padding: 2px;
+          width: 100px;
+        }
       }
     }
     .recipe-form-units option {
