--- a/app/assets/stylesheets/components/recipe_form.scss
+++ b/app/assets/stylesheets/components/recipe_form.scss
@@ -32,7 +32,7 @@
 
     .recipe-form-attribute {
       font-weight: bold;
-      background-color: rgba(255, 255, 255, 0.5);
+      background-color: rgba(255, 255, 255, 0.7);
       margin: 5px auto;
       padding: 2px;
       width: 200px;
@@ -40,10 +40,11 @@
 
     .recipe-form-dir {
       font-weight: bold;
-      background-color: rgba(255, 255, 255, 0.5);
+      background-color: rgba(255, 255, 255, 0.7);
       margin: 5px auto;
       padding: 2px;
-      width: 200px;
+      width: 300px;
+      height: 100px;
     }
 
     .recipe-form-selector {
