adjust styling for errors

--- a/app/assets/stylesheets/components/recipe_detail.scss
+++ b/app/assets/stylesheets/components/recipe_detail.scss
@@ -27,6 +27,7 @@
     flex-direction: row;
     flex-flow: wrap;
     padding: 10px;
+    margin-bottom: 20px;
 
     .recipe-detail-img {
       justify-content: flex-start;
