--- a/app/assets/stylesheets/components/recipe_form.scss
+++ b/app/assets/stylesheets/components/recipe_form.scss
@@ -115,10 +115,13 @@
     }
 
     .recipe-form-errors {
-      height: 30px;
-      font-size: 14px;
+      font-size: 12px;
       color: $bloodred;
       font-weight: bold;
+
+      .recipe-error{
+
+      }
     }
 
   }
