color scheme change

--- a/app/assets/stylesheets/base/layout.scss
+++ b/app/assets/stylesheets/base/layout.scss
@@ -10,8 +10,8 @@ html {
 
 body {
   font-family: sans-serif;
-  background: $bone;
-  color: $mauve;
+  background: #f6f6f6;
+  color: rgba(101, 79, 96, .75);
   font-size: 12px;
   height: 100%;
 }
