--- a/app/assets/stylesheets/components/home.scss
+++ b/app/assets/stylesheets/components/home.scss
@@ -8,14 +8,19 @@
   flex-direction: column;
   padding: 10px;
 
-  .home-img {
-    position: static;
-    min-height: 200px;
-    min-width: 500px;
-    max-height: 500px;
-    max-width: 1000px;
-    margin-bottom: 5px;
-    padding-top: 10px;
+  .img-container {
+    // border: 1px solid white;
+    // border-radius: 10px;
+
+    .home-img {
+      position: static;
+      min-height: 200px;
+      min-width: 500px;
+      max-height: 450px;
+      max-width: 900px;
+      margin-bottom: 5px;
+      padding-top: 10px;
+    }
   }
 
   .recipe-index-container {
@@ -29,14 +34,16 @@
 
       .index-filter {
         font-size: 14px;
-        background: $pink-orange;
-        color: $bone;
+        background: #E1C6B8;
+        // color: $bone;
         height: 30px;
         width: 15%;
         margin: 5px;
         text-align: center;
         align-items: center;
         justify-content: center;
+        border: 1px solid #E1C6B8;
+        border-radius: 10px;
       }
 
       .index-filter:hover {
@@ -61,12 +68,15 @@
           width: 15%;
           min-width: 200px;
           border: 1px $light-gray solid;
+          border-radius: 10px;
           margin: 2px;
           padding: 5px;
           background-color: white;
 
           .recipe-image {
             display: inline-block;
+            border: 1px solid white;
+            border-radius: 5px;
             width: 100%;
             height: 70%;
           }
@@ -74,11 +84,12 @@
           .recipe-name {
             font-size: 16px;
             font-weight: bold;
+            text-align: center;
           }
         }
 
         .recipe-container:hover {
-          background: rgba(101, 79, 96, 0.7);
+          background: rgba(101, 79, 96, .5);
           color: white;
           cursor: pointer;
         }
