--- a/app/assets/stylesheets/components/nav.scss
+++ b/app/assets/stylesheets/components/nav.scss
@@ -1,7 +1,7 @@
 
 nav {
   width: 100%;
-  background-color: $bone;
+  background-color: #eeeeee;
   display: flex;
   align-items: center;
 
@@ -23,17 +23,22 @@ nav {
 
 .header-link {
   flex-direction: column;
-  padding: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 3px;
+  padding-top: 15px;
 
   .header-title {
-    font-size: 55px;
+    font-size: 45px;
     font-family: 'Baloo Bhaina';
     display: block;
-    line-height: 1;
+    line-height: .7;
   }
 
   .sub-header-title {
-    font-size: 18px;
+    font-size: 14px;
+    font-style: italic;
+    margin-bottom: -10px;
   }
 
 }
@@ -62,8 +67,12 @@ nav {
   font-family: sans-serif;
   color: #654F60;
   padding: 5px;
+  padding-left: 20px;
+  padding-right: 20px;
   margin: 5px;
   margin-right: 10px;
+  border: 2px solid #E1C6B8;
+  border-radius: 10px;
 }
 
 .header-button:hover {
